# pluto

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  MAINTAINERS  README  README.md  build.zig  build.zig.zon  meson.build
cmake/: deps.cmake
docs/: Doxyfile  README  README.md  TDA  TIA  TODO.md  grammar.md  plan.md  ti-ir.md  tiir-grammar.md
docs/design/: data-oriented-design.md
docs/plan/v0.1/: charter.md  data-oriented-design-principles.md  decisions.md  exit-gate-checks.md  further-considerations.md  roadmap.md  terminology.md
docs/ref/x86/InstructionTables/: instruction_tables.ods
docs/ref/x86/InstructionTables/AMD/: x86_64_AMD_ZEN1_instruction_tables.csv  x86_64_AMD_ZEN2_instruction_tables.csv  x86_86_AMD_ZEN3_instruction_tables.csv
docs/ref/x86/SoftwareOptimizationGuides/ZEN3/: Family_19h_Instruction_Latencies_version_1-00.csv  Family_19h_Instruction_Latencies_version_1-00.xlsx
docs/ref/x86/SoftwareOptimizationGuides/ZEN5/: Zen5_Instruction_Latencies_version_1-00.xlsx
docs/specs/v0.1/: basic-blocks.md  constants.md  functions.md  import-export.md  instructions.md  literals.md  meta-decls.md  modules.md  names.md  ti-ir-grammar.md  types.md
docs/specs/v0.1/instructions/: add.md  div.md  mod.md  mul.md  phi.md  ret.md  sub.md
include/adt/: flat_map.hpp  string_interner.hpp
include/context/: context.h  literal_interner.h  string_interner.h  value_interner.h
include/frontend/: lexer.hpp  parser.hpp  source_location.hpp  token.hpp
include/pass/: pass.h
include/support/: cli_parser.h  string_constant.h  string_view.h
include/ti-ir/: block.hpp  function.hpp  index.hpp  instruction.hpp  layout.hpp  layout_interner.hpp  literal.hpp  module.hpp  opcode.hpp  operand.hpp  ssa.hpp  string_interner.hpp  symbol_table.hpp  tuple.hpp  type.hpp  type_interner.hpp
include/tiir/: block.hpp  function.hpp  index.hpp  instruction.hpp  literal.h  literal.hpp  module.hpp  opcode.hpp  operand.h  operand.hpp  ssa.hpp  string_interner.hpp  symbol_table.hpp  tuple.hpp  type.hpp  type_interner.hpp  value.h
include/ts-ir/: module.hpp  target.hpp
src/: CMakeLists.txt  main.c  main.cpp  main.zig  root.zig
src/adt/: string_interner.cpp
src/context/: CMakeLists.txt  context.c  literal_interner.c  string_interner.c  value_interner.c
src/frontend/: lexer.re2c
src/support/: CMakeLists.txt  cli_parser.c  string_constant.c  string_view.c
src/ti-ir/: layout.cpp  layout_interner.cpp  string_interner.cpp  type.cpp  type_interner.cpp
src/tiir/: CMakeLists.txt  literal.c  operand.c  string_interner.cpp  tia.zig  type.cpp  type_interner.cpp  value.c
test/: CMakeLists.txt
test/adt/: test_flat_map.cpp  test_string_interner.cpp
test/frontend/: test_lexer.cpp
test/tiir/: test_string_interner.cpp
tests/: CMakeLists.txt
tests/src/context/: string_interner.c
tests/src/support/: cli_parser.c  string_constant.c  string_view.c
tests/src/tiir/: literal.c  operand.c  value.c
